--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,7 @@
   <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.3.1/css/all.css' integrity='sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU'
     crossorigin='anonymous'>
     <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet'>
-  <script src='https://cdn.rawgit.com/visionmedia/page.js/master/page.js'></script>
-  <link rel='stylesheet' href='dist/style.css'>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/page.js/1.11.0/page.js"></script>  <link rel='stylesheet' href='dist/style.css'>
 </head>
  <header>
     <nav class='navbar navbar-light text-warning bg-dark justify-content-between header'>
